--- a/package.json
+++ b/package.json
@@ -1,9 +1,32 @@
 {
+  "name": "farmit-mobile",
+  "private": true,
+  "version": "1.0.0",
+  "main": "index.js",
+  "scripts": {
+    "start": "expo start",
+    "android": "expo start --android",
+    "ios": "expo start --ios",
+    "web": "expo start --web"
+  },
   "dependencies": {
+    "expo": "^51.0.39",
+    "expo-router": "3.5.24",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-native": "0.74.5",
     "@expo/vector-icons": "^14.1.0",
+    "@react-navigation/native": "6.1.18",
+    "@react-navigation/native-stack": "6.9.25",
+    "@react-navigation/bottom-tabs": "6.5.12",
+    "@react-navigation/drawer": "6.6.14",
+    "react-native-screens": "~3.29.0",
+    "react-native-safe-area-context": "4.10.5",
     "@react-native-async-storage/async-storage": "^1.24.0",
     "axios": "^1.11.0",
-    "expo-router": "^5.1.4",
     "firebase": "^12.1.0"
+  },
+  "devDependencies": {
+    "@expo/cli": "^0.18.24"
   }
 }
